k8s/bases/harbor/helm.yaml
---
# Source: harbor/templates/chartmuseum/chartmuseum-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-chartmuseum"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - port: 80
      targetPort: 9999
  selector:
    release: izel
    app: "harbor"
    component: chartmuseum
---
# Source: harbor/templates/clair/clair-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-clair"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - name: adapter
      port: 8080
  selector:
    release: izel
    app: "harbor"
    component: clair
---
# Source: harbor/templates/core/core-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-harbor-core
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    release: izel
    app: "harbor"
    component: core
---
# Source: harbor/templates/database/database-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-database"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - port: 5432
  selector:
    release: izel
    app: "harbor"
    component: database
---
# Source: harbor/templates/jobservice/jobservice-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-jobservice"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    release: izel
    app: "harbor"
    component: jobservice
---
# Source: harbor/templates/notary/notary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-harbor-notary-server
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
  - port: 4443
  selector:
    release: izel
    app: "harbor"
    component: notary-server
---
# Source: harbor/templates/notary/notary-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-harbor-notary-signer
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
  - port: 7899
  selector:
    release: izel
    app: "harbor"
    component: notary-signer
---
# Source: harbor/templates/portal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-portal"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    release: izel
    app: "harbor"
    component: portal
---
# Source: harbor/templates/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: izel-harbor-redis
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - port: 6379
  selector:
    release: izel
    app: "harbor"
    component: redis
---
# Source: harbor/templates/registry/registry-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-registry"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - name: registry
      port: 5000
    - name: controller
      port: 8080
  selector:
    release: izel
    app: "harbor"
    component: registry
---
# Source: harbor/templates/trivy/trivy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "izel-harbor-trivy"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
spec:
  ports:
    - name: api-server
      protocol: TCP
      port: 8080
  selector:
    release: izel
    app: "harbor"
    component: trivy
---
# Source: harbor/templates/chartmuseum/chartmuseum-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "izel-harbor-chartmuseum"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: chartmuseum
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: chartmuseum
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: chartmuseum
      annotations:
        checksum/configmap: 3f20e0d691299f8b5ec82bcd47588ac99de7fdd9fae87674404585b64d7b42e4
        checksum/secret: 3a1bf456493e6572b25eabe3cbaad3f5e82f8c31357a61e86d36b409d9e9b3c8
        checksum/secret-core: d8317f4a076aac88e69a6189a257632e436ad081204415d1abfc47b4a2b71518
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: chartmuseum
        image: goharbor/chartmuseum-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            scheme: HTTP
            port: 9999
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            scheme: HTTP
            port: 9999
          initialDelaySeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 9999
        volumeMounts:
        - name: chartmuseum-data
          mountPath: /chart_storage
          subPath: 
      volumes:
      - name: chartmuseum-data
        persistentVolumeClaim:
          claimName: izel-harbor-chartmuseum
---
# Source: harbor/templates/clair/clair-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izel-harbor-clair
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: clair
spec:
  replicas: 1
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: clair
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: clair
      annotations:
        checksum/secret: 3e8557dd7f91d0e408b2771f2cd983b14e5989ea6e309763754dc255baa696b4
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: clair
        image: goharbor/clair-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 6061
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 6061
          initialDelaySeconds: 30
          periodSeconds: 10
        args: ["-log-level", "info"]
        ports:
        - containerPort: 6060
        volumeMounts:
        - name: config
          mountPath: /etc/clair/config.yaml
          subPath: config.yaml
      - name: adapter
        image: goharbor/clair-adapter-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /probe/healthy
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /probe/ready
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        ports:
        - containerPort: 8080
      volumes:
      - name: config
        secret:
          secretName: "izel-harbor-clair"
---
# Source: harbor/templates/core/core-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izel-harbor-core
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: core
spec:
  replicas: 1
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: core
  template:
    metadata:
      labels:
        release: izel
        app: "harbor"
        component: core
      annotations:
        checksum/configmap: 213c19c3cd9a755f83303163f4be69ba588f9e7dc4cfa88d80c24990e7b70f82
        checksum/secret: 5aed85a67eba2ac6688a2a319646724b5075803303dd4bb11c5b69026ee72ee6
        checksum/secret-jobservice: 03cdbfad54539461f25c85c02f6e7f63a3159d398b1267087afc19bf10a0c6ca
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: core
        image: goharbor/harbor-core:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v2.0/ping
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v2.0/ping
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config
          mountPath: /etc/core/app.conf
          subPath: app.conf
        - name: secret-key
          mountPath: /etc/core/key
          subPath: key
        - name: token-service-private-key
          mountPath: /etc/core/private_key.pem
          subPath: tls.key
        - name: ca-download
          mountPath: /etc/core/ca
        - name: psc
          mountPath: /etc/core/token
      volumes:
      - name: config
        configMap:
          name: izel-harbor-core
          items:
            - key: app.conf
              path: app.conf
      - name: secret-key
        secret:
          secretName: izel-harbor-core
          items:
            - key: secretKey
              path: key
      - name: token-service-private-key
        secret:
          secretName: izel-harbor-core
      - name: ca-download
        secret:
          secretName: harbor-tls
      - name: psc
        emptyDir: {}
---
# Source: harbor/templates/jobservice/jobservice-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "izel-harbor-jobservice"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: jobservice
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: jobservice
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: jobservice
      annotations:
        checksum/configmap: f034df1a985d6329bd0e3ced612d9180d9d58e94045d8d5854696cf087fab277
        checksum/configmap-env: 7d48586e3613fd54880ad209a46cf3e5f0d584ca861e86fe37cbef5c8fcd076e
        checksum/secret: cc2371f8c7784a31f43d140f6769b3589b382a03f11dffad319a2aa7b5b09ef9
        checksum/secret-core: f09f8f6a479920a3c99c9e69504ccc384ca149ada1156b0f233c3981bce056c9
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: jobservice
        image: goharbor/harbor-jobservice:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v1/stats
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/stats
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: jobservice-config
          mountPath: /etc/jobservice/config.yml
          subPath: config.yml
        - name: job-logs
          mountPath: /var/log/jobs
          subPath: 
      volumes:
      - name: jobservice-config
        configMap:
          name: "izel-harbor-jobservice"
      - name: job-logs
        persistentVolumeClaim:
          claimName: izel-harbor-jobservice
---
# Source: harbor/templates/notary/notary-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izel-harbor-notary-server
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: notary-server
spec:
  replicas: 1
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: notary-server
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: notary-server
      annotations:
        checksum/secret: f65fe11511b8c8c2a3efaaddeb6f4fa4243cf653cc0907074a0058af292f9e9e
        checksum/secret-core: 2e3bb26c0af6e3d33bc7ea14bc11200a93e24cd52bda646d14d217cab895c2c4
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: notary-server
        image: goharbor/notary-server-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/notary/server-config.postgres.json
          subPath: server.json
        - name: token-service-certificate
          mountPath: /root.crt
          subPath: tls.crt
        - name: signer-certificate
          mountPath: /etc/ssl/notary/ca.crt
          subPath: ca.crt
      volumes:
      - name: config
        secret:
          secretName: "izel-harbor-notary-server"
      - name: token-service-certificate
        secret:
          secretName: izel-harbor-core
      - name: signer-certificate
        secret:
          secretName: izel-harbor-notary-server
---
# Source: harbor/templates/notary/notary-signer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: izel-harbor-notary-signer
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: notary-signer
spec:
  replicas: 1
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: notary-signer
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: notary-signer
      annotations:
        checksum/secret: 877a02dfcb20e5ef4383db1ae3565a82f778be028c6d3856cec7392e432b0ef1
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: notary-signer
        image: goharbor/notary-signer-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/notary/signer-config.postgres.json
          subPath: signer.json
        - name: signer-certificate
          mountPath: /etc/ssl/notary/tls.crt
          subPath: tls.crt
        - name: signer-certificate
          mountPath: /etc/ssl/notary/tls.key
          subPath: tls.key
      volumes:
      - name: config
        secret:
          secretName: "izel-harbor-notary-server"
      - name: signer-certificate
        secret:
          secretName: izel-harbor-notary-server
---
# Source: harbor/templates/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "izel-harbor-portal"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: portal
spec:
  replicas: 1
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: portal
  template:
    metadata:
      labels:
        release: izel
        app: "harbor"
        component: portal
      annotations:
    spec:
      containers:
      - name: portal
        image: goharbor/harbor-portal:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: portal-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: portal-config
        configMap:
          name: "izel-harbor-portal"
---
# Source: harbor/templates/registry/registry-dpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "izel-harbor-registry"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: registry
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: registry
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: registry
      annotations:
        checksum/configmap: d4d536b535b5b952c7737ec6f212d2f2412e5620a801b1299adced25dcb468c3
        checksum/secret: ad7725feee203b45b1e3e7d51f45df26eff092dc4c71df7b93f53c1ba7c5c34d
        checksum/secret-jobservice: 87f0906de5b3afe03f514de5214b1e2fec8b40094df8a9fb672afb78425fd29c
        checksum/secret-core: e28099c3f8d8d12a00b5c0c7aac0ae20b09d0bf1d92ce78b66d11df48aad78bc
    spec:
      securityContext:
        fsGroup: 10000
      containers:
      - name: registry
        image: goharbor/registry-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 5000
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            scheme: HTTP
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 10
        args: ["serve", "/etc/registry/config.yml"]
        ports:
        - containerPort: 5000
        - containerPort: 5001
        volumeMounts:
        - name: registry-data
          mountPath: /storage
          subPath: 
        - name: registry-root-certificate
          mountPath: /etc/registry/root.crt
          subPath: tls.crt
        - name: registry-htpasswd
          mountPath: /etc/registry/passwd
          subPath: passwd
        - name: registry-config
          mountPath: /etc/registry/config.yml
          subPath: config.yml
      - name: registryctl
        image: goharbor/harbor-registryctl:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/health
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 1
          periodSeconds: 10
        args: ["serve", "/etc/registry/config.yml"]
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: registry-data
          mountPath: /storage
          subPath: 
        - name: registry-config
          mountPath: /etc/registry/config.yml
          subPath: config.yml
        - name: registry-config
          mountPath: /etc/registryctl/config.yml
          subPath: ctl-config.yml
      volumes:
      - name: registry-htpasswd
        secret:
          secretName: izel-harbor-registry
          items:
            - key: REGISTRY_HTPASSWD
              path: passwd
      - name: registry-root-certificate
        secret:
          secretName: izel-harbor-core
      - name: registry-config
        configMap:
          name: "izel-harbor-registry"
      - name: registry-data
        persistentVolumeClaim:
          claimName: izel-harbor-registry
---
# Source: harbor/templates/database/database-ss.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "izel-harbor-database"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: database
spec:
  replicas: 1
  serviceName: "izel-harbor-database"
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: database
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: database
      annotations:
        checksum/secret: 272329a94ad9a2c9bdb8cc726edb70b53b4b862ce0ba2f52b5a00d61382a871a
    spec:
      containers:
      - name: database
        image: goharbor/harbor-db:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /docker-healthcheck.sh
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
            - /docker-healthcheck.sh
          initialDelaySeconds: 1
          periodSeconds: 10
        volumeMounts:
        - name: database-data
          mountPath: /var/lib/postgresql/data
          subPath: 
  volumeClaimTemplates:
  - metadata:
      name: "database-data"
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: "1Gi"
---
# Source: harbor/templates/redis/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: izel-harbor-redis
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: redis
spec:
  replicas: 1
  serviceName: izel-harbor-redis
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: redis
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: redis
    spec:
      securityContext:
        fsGroup: 999
      containers:
      - name: redis
        image: goharbor/redis-photon:v1.10.2
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 300
          periodSeconds: 10
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 1
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /var/lib/redis
          subPath: 
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: "1Gi"
---
# Source: harbor/templates/trivy/trivy-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: izel-harbor-trivy
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
    component: trivy
spec:
  replicas: 1
  serviceName: izel-harbor-trivy
  selector:
    matchLabels:
      release: izel
      app: "harbor"
      component: trivy
  template:
    metadata:
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
        component: trivy
      annotations:
        checksum/secret: f9adc0cc3c447a74fdbafe3709e13e89e5404c7834316b01dcb69cc7af5186f3
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
        fsGroup: 10000
      automountServiceAccountToken: false
      containers:
        - name: trivy
          image: goharbor/trivy-adapter-photon:v2.0.1
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          ports:
            - name: api-server
              containerPort: 8080
          volumeMounts:
          - name: data
            mountPath: /home/scanner/.cache
            readOnly: false
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /probe/healthy
              port: api-server
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /probe/ready
              port: api-server
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 1
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 512Mi
  volumeClaimTemplates:
  - metadata:
      name: data
      labels:
        heritage: Helm
        release: izel
        chart: harbor
        app: "harbor"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: "5Gi"
---
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "izel-harbor-ingress"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: harbor-issuer
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - secretName: harbor-tls
    hosts:
    - core.harbor.izelnakri.com
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: izel-harbor-portal
          servicePort: 80
      - path: /api/
        backend:
          serviceName: izel-harbor-core
          servicePort: 80
      - path: /service/
        backend:
          serviceName: izel-harbor-core
          servicePort: 80
      - path: /v2/
        backend:
          serviceName: izel-harbor-core
          servicePort: 80
      - path: /chartrepo/
        backend:
          serviceName: izel-harbor-core
          servicePort: 80
      - path: /c/
        backend:
          serviceName: izel-harbor-core
          servicePort: 80
    host: core.harbor.izelnakri.com
---
# Source: harbor/templates/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "izel-harbor-ingress-notary"
  labels:
    heritage: Helm
    release: izel
    chart: harbor
    app: "harbor"
  annotations:
    certmanager.k8s.io/acme-challenge-type: http01
    certmanager.k8s.io/cluster-issuer: harbor-issuer
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  tls:
  - secretName: harbor-tls
    hosts:
    - notary.harbor.izelnakri.com
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: izel-harbor-notary-server
          servicePort: 4443
    host: notary.harbor.izelnakri.com
